# GameGenerator

./: .env.example  .gitignore  API.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  aibase.py  api_server.py  demo.py  discord_bot.py  examples.py  game_server.py  gamegen.py  idle_rpg_gen.py  pyproject.toml  requirements.txt  run.bat  start.bat  start.sh  startollamaserver.py  test_aibase.py  test_api.py
.github/workflows/: ci.yml
GameGenerator/: .gitignore  README.md  ROADMAP.md  gamegen.py  pyproject.toml  requirements.txt
GameGenerator/docs/: game-generator.md  gamegen-guide.md
GameGenerator/gamegenerator/: __init__.py  __main__.py  asset_importer.py  zip_exporter.py
GameGenerator/gamegenerator/ai/: __init__.py  design_assistant.py
GameGenerator/gamegenerator/genres/: __init__.py  top_down_shooter.py
GameGenerator/gamegenerator/orchestrator/: __init__.py  orchestrator.py
GameGenerator/gamegenerator/schemas/: __init__.py  asset_spec.py  game_spec.py
GameGenerator/gamegenerator/workers/: __init__.py  asset_worker.py  flame_generator.py  validator.py  zip_worker.py
GameGenerator/templates/flutter/: README.md.tmpl
GameGenerator/tests/: test_asset_indexer.py  test_design_assistant.py  test_scaffolder.py  test_zip_exporter.py
docs/: AI_DESIGN_ASSISTANT.md  api-mobile-frameworks.md  architecture-overview.md  best-practices.md  configuration-guide.md  contributing-mobile.md  extending-generators.md  flutter-getting-started.md  game-generator-server.md  game-generator.md  gamegen-guide.md  observability.md  react-native-getting-started.md  schemas.md
docs/tutorials/: flutter-first-widget.md  react-native-first-component.md  troubleshooting.md
examples/flutter/: 01_hello_world.dart  02_counter_app.dart  03_list_view.dart  04_form_validation.dart  05_navigation.dart  README.md
examples/react-native/: 01_hello_world.js  02_counter_app.js  03_flatlist.js  04_form_validation.js  05_navigation.js  README.md
game_generator/: __init__.py  scaffolder.py  spec.py
game_generator/ai/: __init__.py  design_assistant.py  translator.py
game_generator/genres/: __init__.py  idle_rpg.py  top_down_shooter.py
game_generator/server/: __init__.py  __main__.py  app.py  job_manager.py
gamedesign_agent/: __init__.py  __main__.py  agent.py  art_prompting.py  cli.py  config.py  conversation_memory.py  level_generation.py  npc_dialogue.py
issues/: 1.md  phase-6-advanced-features-app-templates-and-multi-file-generation.md
orchestrator/: __init__.py  constraint_resolver.py  orchestrator.py  run_tracker.py
schemas/: __init__.py  build_spec.py  game_spec.py  idle_rpg_design_doc.py
static/: app.js  style.css
templates/: index.html
templates/flutter/: ASSETS_LICENSE.md.tmpl  CREDITS.md.tmpl
tests/: __init__.py  test_agent.py  test_art_prompting.py  test_asset_indexer.py  test_big_generator.py  test_conversation_memory.py  test_design_assistant.py  test_end_to_end_generation.py  test_idle_rpg_design_content.py  test_level_generation.py  test_npc_dialogue.py  test_packaging.py  test_run_tracker.py  test_scaffolder.py  test_schemas.py  test_server.py  test_validator.py  test_zip_exporter.py
workers/: __init__.py  asset_worker.py  flame_generator.py  validator.py  zip_worker.py
