[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamegenerator-design-assistant"
version = "0.1.0"
description = "AI Game Design Assistant – Feature 4 of GameGenerator (free/OSS only)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["game design", "procedural generation", "AI", "NPC dialogue", "stable diffusion"]

# colorama is imported at the top level of gamegen.py
dependencies = ["colorama>=0.4.6"]

[project.optional-dependencies]
config = ["python-dotenv>=1.0.0"]
llm   = ["requests>=2.28.0"]
image = [
    "requests>=2.28.0",
    "diffusers>=0.25.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
]
ollama = [
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
server-test = [
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]
all = [
    "gamegenerator-design-assistant[config,llm,image,ollama]",
]

[project.scripts]
gamedesign-agent = "gamedesign_agent.cli:main"
gamegen = "gamegen:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gamedesign_agent*"]

[tool.setuptools]
py-modules = ["gamegen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff.lint]
# Ignore pre-existing style issues so CI passes on the current codebase.
# New violations of *other* rules will still fail the workflow.
ignore = ["E741", "F401", "F541"]
