[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gamegenerator"
version = "1.0.0"
description = "Flutter/Flame game project generator – scaffold, asset-import, and ZIP in one command."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["game", "flutter", "flame", "generator", "mobile"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
gamegen = "gamegenerator.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gamegenerator*"]
